# cs-ops-env

./: Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml
data/: tickets.json
env/: environment.py  graders.py  models.py
server/: app.py
