[project]
name = "cs-ops-env"
version = "0.1.0"
description = "Customer Support OpenEnv environment"
authors = [{ name = "Ganesh" }]
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "python-dotenv",
    "openenv>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[tool.openenv]
entrypoint = "server.app:app"